--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon" />
 </head>
 <body>
     <main>
@@ -19,7 +20,7 @@
                 <div>
                     <h2>Caravana da Inovação</h2>
                     <p>Evento para divulgar os cursos de tecnologia da UPE e estimular o interesse em inovação e empreendedorismo entre estudantes</p>
-                    <button>PARTICIPE JÁ</button>
+                    <a href="https://forms.gle/ZrbtB5o4qnTbUQEj9" target="_blank">PARTICIPE JÁ</a>
                 </div>
             </div>
         </article>
@@ -125,7 +126,7 @@
                                         <svg fill="#2740C5" height="24px" width="24px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-143 145 512 512" xml:space="preserve" stroke="#2740C5"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M113,145c-141.4,0-256,114.6-256,256s114.6,256,256,256s256-114.6,256-256S254.4,145,113,145z M41.4,508.1H-8.5V348.4h49.9 V508.1z M15.1,328.4h-0.4c-18.1,0-29.8-12.2-29.8-27.7c0-15.8,12.1-27.7,30.5-27.7c18.4,0,29.7,11.9,30.1,27.7 C45.6,316.1,33.9,328.4,15.1,328.4z M241,508.1h-56.6v-82.6c0-21.6-8.8-36.4-28.3-36.4c-14.9,0-23.2,10-27,19.6 c-1.4,3.4-1.2,8.2-1.2,13.1v86.3H71.8c0,0,0.7-146.4,0-159.7h56.1v25.1c3.3-11,21.2-26.6,49.8-26.6c35.5,0,63.3,23,63.3,72.4V508.1z "></path> </g></svg>
                                     </a>
                                 </div>
-                                <p class="cronogramaInfo">Graduado em Tecnologia em Processamento de Dados, com Mestrado, Doutorado e Pós-Doutorado em Ciência da Computação. Possui certificações em testes de software, MPS.BR, Certics e ScrumMaster. Com mais de 23 anos de experiência em TI e 16 anos como professor universitário, leciona na UPE e é consultor do SOFTEX/Recife. Lidera o grupo de pesquisa SEAC e é mentor de startups na Campus Party.</p>
+                                <p class="cronogramaInfo">Graduado em Tecnologia em Processamento de Dados, com Mestrado, Doutorado e Pós-Doutorado em Ciência da Computação. Possui certificações em testes de software, MPS.BR, Certics e ScrumMaster. Com mais de 23 anos de experiência em TI e 16 anos como professor universitário, leciona na UPE e é consultor do SOFTEX/Recife.</p>
                             </div>
                             <img src="./assets/aesga/ivaldir.jpg" alt="">
                         </div>
@@ -136,7 +137,7 @@
                             </a>
                         </div>
                         <img src="./assets/aesga/ivaldir.jpg" alt="">
-                        <p class="cronogramaInfo">Graduado em Tecnologia em Processamento de Dados, com Mestrado, Doutorado e Pós-Doutorado em Ciência da Computação. Possui certificações em testes de software, MPS.BR, Certics e ScrumMaster. Com mais de 23 anos de experiência em TI e 16 anos como professor universitário, leciona na UPE e é consultor do SOFTEX/Recife. Lidera o grupo de pesquisa SEAC e é mentor de startups na Campus Party.</p>
+                        <p class="cronogramaInfo">Graduado em Tecnologia em Processamento de Dados, com Mestrado, Doutorado e Pós-Doutorado em Ciência da Computação. Possui certificações em testes de software, MPS.BR, Certics e ScrumMaster. Com mais de 23 anos de experiência em TI e 16 anos como professor universitário, leciona na UPE e é consultor do SOFTEX/Recife.</p>
                     </div>
                     <div class="horario cronogramaDiv">
                         <h3 class="cronogramaTitle">Horário do Evento</h3>
