added a new sponsor

--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
                     <img src="./assets/patrocinadores/Mosor Matérias Isoladas.png" alt="">
                     <img src="./assets/patrocinadores/OBA Informática.png" alt="">
                     <img src="./assets/patrocinadores/Rodrigo Lima Inglês.png" alt="">
+                    <img src="./assets/patrocinadores/femac.jpg" alt="">
                 </div>
             </div>
             <div id="patrocinadoresSliderDesktop">
@@ -216,6 +217,7 @@
                     <img src="./assets/patrocinadores/Mosor Matérias Isoladas.png" alt="">
                     <img src="./assets/patrocinadores/OBA Informática.png" alt="">
                     <img src="./assets/patrocinadores/Rodrigo Lima Inglês.png" alt="">
+                    <img src="./assets/patrocinadores/femac.jpg" alt="">
                 </div>
                 <div class="patrocinadoresSliderDivDesktop slider2">
                     <img src="./assets/patrocinadores/Dona Antonieta Salles Salgados.jpg" alt="">
@@ -225,6 +227,7 @@
                     <img src="./assets/patrocinadores/Mosor Matérias Isoladas.png" alt="">
                     <img src="./assets/patrocinadores/OBA Informática.png" alt="">
                     <img src="./assets/patrocinadores/Rodrigo Lima Inglês.png" alt="">
+                    <img src="./assets/patrocinadores/femac.jpg" alt="">
                 </div>
                 <div class="patrocinadoresSliderDivDesktop slider2">
                     <img src="./assets/patrocinadores/Dona Antonieta Salles Salgados.jpg" alt="">
@@ -234,6 +237,7 @@
                     <img src="./assets/patrocinadores/Mosor Matérias Isoladas.png" alt="">
                     <img src="./assets/patrocinadores/OBA Informática.png" alt="">
                     <img src="./assets/patrocinadores/Rodrigo Lima Inglês.png" alt="">
+                    <img src="./assets/patrocinadores/femac.jpg" alt="">
                 </div>
             </div>
         </article>
